# maplibre-gl-native

./: .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  WORKSPACE
.aswb/: .bazelproject
.github/workflows/: android-ci.yml  ios-ci.yml  linux-ci.yml
bazel/: core.bzl  flags.bzl
benchmark/: CMakeLists.txt
cmake/: bazel.cmake  core.cmake
include/mbgl/actor/: actor.hpp  scheduler.hpp
include/mbgl/gfx/: drawable.hpp  renderer_backend.hpp  shader.hpp  shader_registry.hpp  uniform_block.hpp  uniform_buffer.hpp  vertex_attribute.hpp
include/mbgl/gl/: renderer_backend.hpp  uniform_buffer_gl.hpp
include/mbgl/mtl/: context.hpp  renderer_backend.hpp
include/mbgl/renderer/: layer_group.hpp
include/mbgl/storage/: delegate_file_source.hpp
include/mbgl/style/: style.hpp
include/mbgl/util/: instrumentation.hpp
platform/: BUILD.bazel
platform/android/: .bazelrc  BUILD.bazel  WORKSPACE
platform/android/MapLibreAndroid/src/main/java/org/maplibre/android/maps/: MapView.java  NativeMap.java  NativeMapView.java
platform/android/MapLibreAndroidTestApp/: build.gradle
platform/android/MapLibreAndroidTestApp/src/androidTest/java/org/maplibre/android/maps/: NativeMapViewTest.kt
platform/android/MapLibreAndroidTestApp/src/main/java/org/maplibre/android/testapp/: MapLibreApplication.kt
platform/android/MapboxGLAndroidSDK/src/cpp/: jni_native.hpp  main.cpp
platform/android/MapboxGLAndroidSDK/src/main/: AndroidManifest.xml
platform/android/MapboxGLAndroidSDK/src/main/java/org/maplibre/android/location/: LocationComponentOptions.java
platform/android/MapboxGLAndroidSDKTestApp/src/androidTest/: AndroidManifest.xml
platform/android/MapboxGLAndroidSDKTestApp/src/main/: AndroidManifest.xml
platform/darwin/: BUILD.bazel
platform/darwin/bazel/: files.bzl
platform/darwin/docs/: BUILD.bazel
platform/darwin/test/: BUILD.bazel
platform/default/: BUILD.bazel
platform/default/src/mbgl/render-test/: main.cpp
platform/default/src/mbgl/storage/: file_source_manager.cpp
platform/default/src/mbgl/util/: utf.cpp
platform/glfw/: BUILD.bazel  CMakeLists.txt  metal_backend.mm
platform/ios/: BAZEL.md  BUILD.bazel
platform/ios/bazel/: files.bzl
platform/ios/platform/darwin/scripts/: generate-style-code.js
platform/ios/platform/ios/: README.md
platform/ios/platform/ios/scripts/: bazel-xcodeproj.sh
platform/ios/scripts/: bazel-package.sh  bazel-xcodeproj.sh
platform/ios/test/: BUILD.bazel
platform/linux/: linux.cmake
platform/linux/src/test/: parallel_test.cpp
platform/macos/: BUILD.bazel  macos.cmake
platform/macos/bazel/: example_config.bzl  files.bzl
platform/macos/scripts/: bazel-xcodeproj.sh
platform/qt/src/utils/: scheduler.cpp
scripts/: generate-style-code.list  style-code.js
src/mbgl/actor/: mailbox.cpp
src/mbgl/gfx/: drawable_custom_layer_host_tweaker.cpp  renderer_backend.cpp  shader.cpp
src/mbgl/gl/: context.cpp  context.hpp  drawable_gl.cpp  layer_group_gl.cpp  renderer_backend.cpp  uniform_buffer_gl.cpp  upload_pass.cpp  value.hpp
src/mbgl/map/: transform_state.cpp  transform_state.hpp
src/mbgl/mtl/: context.cpp  renderer_backend.cpp
src/mbgl/renderer/: paint_parameters.cpp  render_orchestrator.cpp  render_orchestrator.hpp  renderer_impl.cpp  tile_layer_group.cpp
src/mbgl/renderer/layers/: fill_layer_tweaker.cpp  line_layer_tweaker.cpp  render_fill_layer.cpp  render_location_indicator_layer.cpp  symbol_layer_tweaker.cpp
src/mbgl/renderer/sources/: render_geojson_source.cpp  render_raster_source.cpp  render_tile_source.cpp  render_vector_source.cpp
src/mbgl/style/: style.cpp
src/mbgl/tile/: geometry_tile.cpp  geometry_tile.hpp  geometry_tile_worker.cpp  geometry_tile_worker.hpp  raster_dem_tile.cpp  raster_tile.cpp  tile_loader_impl.hpp
src/mbgl/util/: camera.cpp  camera.hpp  mat4.cpp  mat4.hpp  thread_pool.cpp  thread_pool.hpp
test/: BUILD.bazel  CMakeLists.txt
test/actor/: actor.test.cpp
test/include/mbgl/test/: vector_tile_test.hpp
test/map/: map.test.cpp
test/renderer/: shader_registry.test.cpp
test/style/: source.test.cpp
