load("@build_bazel_rules_android//android:rules.bzl", "android_binary")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
load("//bazel:flags.bzl", "CPP_FLAGS", "MAPLIBRE_FLAGS")

cc_library(
    name = "android-cpp-sdk",
    srcs = [
        "MapboxGLAndroidSDK/src/cpp/main.cpp",
        "MapboxGLAndroidSDK/src/cpp/jni_native.cpp",
        "MapboxGLAndroidSDK/src/cpp/jni_native.hpp",
        "MapboxGLAndroidSDK/src/cpp/file_source.cpp",
        "MapboxGLAndroidSDK/src/cpp/file_source.hpp",
        "MapboxGLAndroidSDK/src/cpp/http_file_source.cpp",
        "MapboxGLAndroidSDK/src/cpp/i18n/collator.cpp",
        "MapboxGLAndroidSDK/src/cpp/i18n/collator_jni.hpp",
        "MapboxGLAndroidSDK/src/cpp/i18n/number_format.cpp",
        "MapboxGLAndroidSDK/src/cpp/i18n/number_format_jni.hpp",
        "MapboxGLAndroidSDK/src/cpp/logger.cpp",
        "MapboxGLAndroidSDK/src/cpp/logger.hpp",
        "MapboxGLAndroidSDK/src/cpp/logging_android.cpp",
        "MapboxGLAndroidSDK/src/cpp/text/local_glyph_rasterizer.cpp",
        "MapboxGLAndroidSDK/src/cpp/text/local_glyph_rasterizer_jni.hpp",
        "MapboxGLAndroidSDK/src/cpp/android_renderer_backend.cpp",
        "MapboxGLAndroidSDK/src/cpp/android_renderer_backend.hpp",
        "MapboxGLAndroidSDK/src/cpp/android_renderer_frontend.cpp",
        "MapboxGLAndroidSDK/src/cpp/android_renderer_frontend.hpp",
        "MapboxGLAndroidSDK/src/cpp/annotation/marker.cpp",
        "MapboxGLAndroidSDK/src/cpp/annotation/marker.hpp",
        "MapboxGLAndroidSDK/src/cpp/annotation/multi_point.hpp",
        "MapboxGLAndroidSDK/src/cpp/annotation/polygon.cpp",
        "MapboxGLAndroidSDK/src/cpp/annotation/polygon.hpp",
        "MapboxGLAndroidSDK/src/cpp/annotation/polyline.cpp",
        "MapboxGLAndroidSDK/src/cpp/annotation/polyline.hpp",
        "MapboxGLAndroidSDK/src/cpp/asset_manager.hpp",
        "MapboxGLAndroidSDK/src/cpp/asset_manager_file_source.cpp",
        "MapboxGLAndroidSDK/src/cpp/asset_manager_file_source.hpp",
        "MapboxGLAndroidSDK/src/cpp/connectivity_listener.cpp",
        "MapboxGLAndroidSDK/src/cpp/connectivity_listener.hpp",
        "MapboxGLAndroidSDK/src/cpp/conversion/collection.cpp",
        "MapboxGLAndroidSDK/src/cpp/conversion/collection.hpp",
        "MapboxGLAndroidSDK/src/cpp/conversion/color.cpp",
        "MapboxGLAndroidSDK/src/cpp/conversion/color.hpp",
        "MapboxGLAndroidSDK/src/cpp/conversion/constant.cpp",
        "MapboxGLAndroidSDK/src/cpp/conversion/constant.hpp",
        "MapboxGLAndroidSDK/src/cpp/conversion/conversion.hpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/feature.cpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/feature.hpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/feature_collection.cpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/feature_collection.hpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/geometry.cpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/geometry.hpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/geometry_collection.cpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/geometry_collection.hpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/line_string.cpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/line_string.hpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/multi_line_string.cpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/multi_line_string.hpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/multi_point.cpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/multi_point.hpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/multi_polygon.cpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/multi_polygon.hpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/point.cpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/point.hpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/polygon.cpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/polygon.hpp",
        "MapboxGLAndroidSDK/src/cpp/geojson/util.hpp",
        "MapboxGLAndroidSDK/src/cpp/geometry/lat_lng.cpp",
        "MapboxGLAndroidSDK/src/cpp/geometry/lat_lng.hpp",
        "MapboxGLAndroidSDK/src/cpp/geometry/lat_lng_bounds.cpp",
        "MapboxGLAndroidSDK/src/cpp/geometry/lat_lng_bounds.hpp",
        "MapboxGLAndroidSDK/src/cpp/geometry/lat_lng_quad.cpp",
        "MapboxGLAndroidSDK/src/cpp/geometry/lat_lng_quad.hpp",
        "MapboxGLAndroidSDK/src/cpp/geometry/projected_meters.cpp",
        "MapboxGLAndroidSDK/src/cpp/geometry/projected_meters.hpp",
        "MapboxGLAndroidSDK/src/cpp/graphics/pointf.cpp",
        "MapboxGLAndroidSDK/src/cpp/graphics/pointf.hpp",
        "MapboxGLAndroidSDK/src/cpp/graphics/rectf.cpp",
        "MapboxGLAndroidSDK/src/cpp/graphics/rectf.hpp",
        "MapboxGLAndroidSDK/src/cpp/gson/json_array.cpp",
        "MapboxGLAndroidSDK/src/cpp/gson/json_array.hpp",
        "MapboxGLAndroidSDK/src/cpp/gson/json_element.cpp",
        "MapboxGLAndroidSDK/src/cpp/gson/json_element.hpp",
        "MapboxGLAndroidSDK/src/cpp/gson/json_object.cpp",
        "MapboxGLAndroidSDK/src/cpp/gson/json_object.hpp",
        "MapboxGLAndroidSDK/src/cpp/gson/json_primitive.cpp",
        "MapboxGLAndroidSDK/src/cpp/gson/json_primitive.hpp",
        "MapboxGLAndroidSDK/src/cpp/java/util.cpp",
        "MapboxGLAndroidSDK/src/cpp/java/util.hpp",
        "MapboxGLAndroidSDK/src/cpp/java_types.cpp",
        "MapboxGLAndroidSDK/src/cpp/java_types.hpp",
        "MapboxGLAndroidSDK/src/cpp/maplibre.cpp",
        "MapboxGLAndroidSDK/src/cpp/maplibre.hpp",
        "MapboxGLAndroidSDK/src/cpp/map/camera_position.cpp",
        "MapboxGLAndroidSDK/src/cpp/map/camera_position.hpp",
        "MapboxGLAndroidSDK/src/cpp/map/image.cpp",
        "MapboxGLAndroidSDK/src/cpp/map/image.hpp",
        "MapboxGLAndroidSDK/src/cpp/map_renderer.cpp",
        "MapboxGLAndroidSDK/src/cpp/map_renderer.hpp",
        "MapboxGLAndroidSDK/src/cpp/map_renderer_runnable.cpp",
        "MapboxGLAndroidSDK/src/cpp/map_renderer_runnable.hpp",
        "MapboxGLAndroidSDK/src/cpp/native_map_view.cpp",
        "MapboxGLAndroidSDK/src/cpp/native_map_view.hpp",
        "MapboxGLAndroidSDK/src/cpp/offline/offline_manager.cpp",
        "MapboxGLAndroidSDK/src/cpp/offline/offline_manager.hpp",
        "MapboxGLAndroidSDK/src/cpp/offline/offline_region.cpp",
        "MapboxGLAndroidSDK/src/cpp/offline/offline_region.hpp",
        "MapboxGLAndroidSDK/src/cpp/offline/offline_region_definition.cpp",
        "MapboxGLAndroidSDK/src/cpp/offline/offline_region_definition.hpp",
        "MapboxGLAndroidSDK/src/cpp/offline/offline_region_error.cpp",
        "MapboxGLAndroidSDK/src/cpp/offline/offline_region_error.hpp",
        "MapboxGLAndroidSDK/src/cpp/offline/offline_region_status.cpp",
        "MapboxGLAndroidSDK/src/cpp/offline/offline_region_status.hpp",
        "MapboxGLAndroidSDK/src/cpp/snapshotter/map_snapshot.cpp",
        "MapboxGLAndroidSDK/src/cpp/snapshotter/map_snapshot.hpp",
        "MapboxGLAndroidSDK/src/cpp/snapshotter/map_snapshotter.cpp",
        "MapboxGLAndroidSDK/src/cpp/snapshotter/map_snapshotter.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/android_conversion.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/conversion/filter.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/conversion/filter.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/conversion/position.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/conversion/position.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/conversion/property_expression.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/conversion/property_value.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/conversion/transition_options.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/conversion/transition_options.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/conversion/url_or_tileset.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/conversion/url_or_tileset.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/formatted.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/formatted.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/formatted_section.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/formatted_section.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/background_layer.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/background_layer.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/circle_layer.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/circle_layer.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/custom_layer.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/custom_layer.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/fill_extrusion_layer.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/fill_extrusion_layer.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/fill_layer.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/fill_layer.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/heatmap_layer.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/heatmap_layer.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/hillshade_layer.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/hillshade_layer.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/layer.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/layer.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/layer_manager.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/layer_manager.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/line_layer.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/line_layer.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/raster_layer.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/raster_layer.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/symbol_layer.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/symbol_layer.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/location_indicator_layer.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/layers/location_indicator_layer.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/light.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/light.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/position.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/position.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/custom_geometry_source.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/custom_geometry_source.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/geojson_source.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/geojson_source.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/image_source.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/image_source.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/raster_dem_source.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/raster_dem_source.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/raster_source.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/raster_source.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/source.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/source.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/unknown_source.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/unknown_source.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/vector_source.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/sources/vector_source.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/transition_options.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/transition_options.hpp",
        "MapboxGLAndroidSDK/src/cpp/style/value.cpp",
        "MapboxGLAndroidSDK/src/cpp/style/value.hpp",
        "MapboxGLAndroidSDK/src/cpp/util/default_style.cpp",
        "MapboxGLAndroidSDK/src/cpp/util/tile_server_options.cpp",
        "MapboxGLAndroidSDK/src/cpp/util/default_style.hpp",
        "MapboxGLAndroidSDK/src/cpp/util/tile_server_options.hpp",
    ],
    copts = CPP_FLAGS + MAPLIBRE_FLAGS,
    hdrs = [],
    visibility = ["//visibility:public"],
    includes = [],
    deps = [
        "//:mbgl-core",
        "//vendor:mapbox-base",
        "//vendor:mapbox-jni",
        "//vendor:icu",
    ] + select({
        "//:windows": [
            "//platform/windows:mbgl-windows",
        ],
        "//conditions:default": [
            "//platform/default:mbgl-default",
        ],
    }),
)

genrule(
    name = "android-java-sdk-build-config",
    outs = ["BuildConfig.java"],
    cmd = "echo 'package org.maplibre.android;" +
            "public class BuildConfig {" +
            "public static final String GIT_REVISION_SHORT = \"0\";" +
            "public static final String MAPLIBRE_SDK_IDENTIFIER = \"maplibre-maps-android\";" +
            "public static final String MAPBOX_SDK_VERSION = \"0\";" +
            "public static final String MAPBOX_VERSION_STRING = \"0\";" +
            "public static final String MAPBOX_EVENTS_USER_AGENT = \"maplibre-maps-android/0\";" +
            "}' > $(@)",
)

kt_android_library(
    name = "android-java-sdk",
    srcs = glob([
        "MapboxGLAndroidSDK/src/main/java/**/*.java",
        "MapboxGLAndroidSDK/src/main/java/**/*.kt",
    ]) + [":android-java-sdk-build-config"],
    manifest = "MapboxGLAndroidSDK/src/main/AndroidManifest.xml",
    resource_files = glob(["MapboxGLAndroidSDK/src/main/res/**"]),
    assets = glob(["MapboxGLAndroidSDK/src/main/assets/**"]),
    assets_dir = "MapboxGLAndroidSDK/src/main/assets",
    custom_package = "org.maplibre.android",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_maplibre_gl_android_sdk_geojson",
        "@maven//:com_mapbox_mapboxsdk_mapbox_android_gestures",
        "@maven//:org_maplibre_gl_android_sdk_turf",
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_fragment_fragment",
        "@maven//:com_squareup_okhttp3_okhttp",
        "@maven//:com_jakewharton_timber_timber",
        "@maven//:androidx_interpolator_interpolator",
        # "@maven//:junit_junit",
        # "@maven//:org_mockito_mockito_core",
        # "@maven//:io_mockk_mockk",
        # "@maven//:org_robolectric_robolectric",
        # "@maven//:org_jetbrains_kotlin_kotlin_stdlib_jdk8",
        # "@maven//:commons_io_commons_io",
        # "@maven//:org_assertj_assertj_core",
        # "@maven//:androidx_test_ext_junit",
        # "@maven//:androidx_test_rules",
    ]
)

android_binary(
    name = "android-test-app",
    srcs = glob(["MapboxGLAndroidSDKTestApp/main/java/**/*.java"]),
    manifest = "MapboxGLAndroidSDKTestApp/src/main/AndroidManifest.xml",
    resource_files = glob(["MapboxGLAndroidSDKTestApp/src/main/res/**"]),
    assets = glob(["MapboxGLAndroidSDKTestApp/src/main/assets/**"]),
    assets_dir = "MapboxGLAndroidSDKTestApp/src/main/assets",
    deps = [
        ":android-java-sdk",
        ":android-cpp-sdk",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib_jdk8",
        "@maven//:org_maplibre_gl_android_sdk_turf",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_recyclerview_recyclerview",
        "@maven//:com_google_android_material_material",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_multidex_multidex",
        "@maven//:com_jakewharton_timber_timber",
        "@maven//:com_squareup_okhttp3_okhttp",
        "@maven//:com_squareup_leakcanary_leakcanary_android",
    ],
)
